Fixed form-border, form-button, copyright, validation, navigation menu align, full pictures

--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,9 @@ p {
 }
 .block-bg-copyright {
   background-color: #003f6d;
+  position: relative;
+  padding-top: 35px;
+  padding-bottom: 24px;
 }
 .section {
   position: relative;
@@ -144,7 +147,6 @@ p {
   color: #FFF;
 }
 .navigation {
-  padding-top: 95px;
   font-size: 18px;
   font-weight: 700;
   color: #fff;
@@ -158,6 +160,7 @@ p {
 }
 @media only screen and (min-width: 768px) {
   .navigation {
+    padding-top: 95px;
     position: relative;
     z-index: 1;
     padding-top: 0;
@@ -224,6 +227,10 @@ p {
   /*IE7 fix*/
   bottom: 0;
   position: fixed;
+  display: flex;
+}
+.navigation--active ul {
+  margin: auto;
 }
 .cmn-toggle-switch {
   display: block;
@@ -590,19 +597,19 @@ a.mouse_scroll:focus {
 .form_button {
   display: inline-block;
   margin: 5px 0;
-  padding: 15px 50px;
   white-space: nowrap;
   background-color: #065a97;
   height: 60px;
   -webkit-border-radius: 30px;
   border-radius: 30px;
-  border: 2px solid #fff;
+  border: 4px solid #fff;
   color: #fff;
   font-weight: 700;
   text-decoration: none;
   font-size: 18px;
   line-height: 1;
   width: 290px;
+  text-align: center;
 }
 @media only screen and (min-width: 768px) {
   .form_button {
@@ -628,7 +635,7 @@ a.mouse_scroll:focus {
   background-color: #065a97;
   cursor: pointer;
   color: #ffe400;
-  border: 2px solid #ffe400;
+  border: 4px solid #ffe400;
 }
 .filter-conteiner {
   font-size: 16px;
@@ -698,11 +705,12 @@ a.mouse_scroll:focus {
   color: #82B3D7;
   font-size: 16px;
   line-height: 28px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 .block-copyright__text {
   color: #5E92B9;
   font-size: 14px;
+  line-height: 1.8;
   margin: 0;
   padding: 0;
 }
@@ -740,12 +748,14 @@ a.mouse_scroll:focus {
   font-weight: 700;
   font-size: 16px;
   line-height: 32px;
+  outline: none;
+  border: 3px solid #fff;
 }
 .form_item:hover,
 .form_item:focus,
 .form_item:active,
 .form_item.active {
-  border: 2px solid #a2d1f4;
+  border: 3px solid #a2d1f4;
   color: #005999;
 }
 .form_item--width100 {
