--- a/less/base/_base.less
+++ b/less/base/_base.less
@@ -39,6 +39,9 @@ p {
 
 .block-bg-copyright {
 	background-color: #003f6d;
+	position: relative;
+	padding-top: 35px;
+	padding-bottom: 24px;
 }
 
 
