--- a/less/blocks/_buttons.less
+++ b/less/blocks/_buttons.less
@@ -29,19 +29,19 @@
 .form_button {
 	display: inline-block;
 	margin: 5px 0;
-	padding: 15px 50px;
 	white-space: nowrap;
 	background-color: #065a97;
 	height: 60px;
 	-webkit-border-radius: 30px;
 	        border-radius: 30px;
-	border: 2px solid #fff;
+	border: 4px solid #fff;
 	color: #fff;
 	font-weight: 700;
 	text-decoration: none;
 	font-size: 18px;
 	line-height: 1;
 	width: 290px;
+	text-align: center;
 	
 	@media only screen and (min-width: 768px) {
 		font-size: 20px;
@@ -64,6 +64,6 @@
 		background-color: #065a97;
 		cursor: pointer;
 		color: @yellow;
-		border: 2px solid @yellow;
+		border: 4px solid @yellow;
 	}
 }
