--- a/less/blocks/_contact_form.less
+++ b/less/blocks/_contact_form.less
@@ -31,9 +31,11 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 32px;
+    outline: none;
+    border: 3px solid #fff;
 
     &:hover, &:focus, &:active, &.active {
-		border: 2px solid #a2d1f4;
+		border: 3px solid #a2d1f4;
 		color: rgb(0%, 35%, 60%, 1); //#00599a
 	}
 }
