--- a/less/blocks/_copyright.less
+++ b/less/blocks/_copyright.less
@@ -2,12 +2,13 @@
 	color: #82B3D7;
 	font-size: 16px;
 	line-height: 28px;	
-	margin-bottom: 5px;
+	margin-bottom: 10px;
 }
 
 .block-copyright__text {
 	color: #5E92B9;
 	font-size: 14px;
+	line-height: 1.8;
 	margin: 0;
 	padding: 0;
 	a, p {
